# ultimate-chinese

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  build.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yaml  release.yml
docs/: CARD_CONTENT_GUIDELINES.md  HOW_TO_ADD_WORDS.md  HOW_TO_USE_THIS_DECK.md
recipes/: anki_to_source.yaml  source_to_anki.yaml
res/: extras.json
res/media/audio/: Zh-pī.oga  Zh-yǒuyí.oga
res/tbcl/: TBCL_affixlist_2022-09-20.csv  TBCL_characterlist_2022-09-20.csv  TBCL_grammarlist_2023-01-04.csv  TBCL_wordlist_2023-05-17.csv  naer.json  tbcl_wordlist.csv  tbcl_words.csv  tbcl_words_naer_defns.jsonl
res/tocfl/: combined.csv
src/: build_words.py  format_json.py  schema.py  tbcl.py  words.py  words_pydantic_models.py
src/brainbrew/headers/: desc.html
src/brainbrew/note_models/: Ultimate_Chinese.yaml
src/brainbrew/recipes/: source_to_anki.yaml
src/data/: main.csv  tbcl.py  tbcl_words.csv  tbcl_words.py
src/headers/: default.yaml  desc.html
src/note_models/: Ultimate_Chinese.yaml  Vocab_Review.html  style.css  style.scss
src/note_models/templates/: Vocab Review.html
src/scripts/: README.md  add_guids.py  clean_audio_files.py  generate_tbcl_audio.py  match_words.py  replace_me.py  split_fields.py  tbcl_wordlist_to_csv.py  trim_audio_names.py  tts_generator.py  tts_template.xml
src/scripts/dev/: cedict.py  utils.py
