[project]
name = "ultimate-chinese"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brain-brew>=0.3.11",
    "pandas>=2.2.3",
    "py-pinyin-split>=5.0.0",
    "tqdm>=4.67.0",
    "pypinyin>=0.53.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pyperclip>=1.9.0",
    "azure-cognitiveservices-speech>=1.41.1",
    "python-dotenv>=1.0.1",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "pywikibot>=9.6.0",
    "genanki>=0.13.1",
    "mwparserfromhell>=0.6.6",
    "beautifulsoup4>=4.12.3",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
    "ipykernel>=6.29.5",
    "pydantic>=2.10.4",
    "ipywidgets>=8.1.5",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
