[project]
name = "ultimate-chinese"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brain-brew>=0.3.11",
    "pandas>=2.2.3",
    "py-pinyin-split>=5.0.0",
    "pypinyin>=0.53.0",
    "airium>=0.2.6",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = ["mypy>=1.14.0", "pandas-stubs>=2.2.3.241126", "ruff>=0.9.0"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
